irrlamb 0.2.1 -
-

irrlamb 0.2.0 - 2015-09-19
- Added gamepad support
- Added per-pixel lighting
- Added new levels
- Made menus and fonts bigger
- Can access options in-game now
- Added shaders, anisotropic filtering, V-sync, and MSAA to video options
- Added level names to menu
- Fixed replay bug
- Fixed memory leaks

irrlamb 0.1.1 - 2013-03-03
- Added audio (OpenAL)
- Added screen fading
- Added shader support
- Added support for customlevels
- Added invert mouse option (or press F2 during play)
- Save data now in %APPDATA%/irrlamb for windows
- Converted meshes to a binary format for faster loading
- Fixed a Lua API bug in Object.GetPosition
- Removed scons, added cmake.

irrlamb 0.1.0 - 2010-01-06
- Completely updated the game's graphics
- Added 12 tutorial levels + 2 skate levels
- Added ability to set shadows, filtering, and AA in config file
- Added cylinder objects
- Physics are now framerate independent
- Cleaned up level format
- Cleaned up Lua API
- Reduced replay file size
- Removed boost dependencies
- Updated irrlicht to 1.6
- Updated bullet to 2.75
- Added SQLite for level stats
- Fixed various bugs
- Removed audio, old levels, and grapple for now
- Refactored lots of code

irrlamb 0.0.5 - 2007-08-27
- New gameplay mechanic: grapple
- Added more levels
- Added springs
- Added basic sounds
- Added code to limit frame rate
- Changed replay file structure. Old replays are incompatible

irrlamb 0.0.4 - 2007-07-09
- Added level unlocking
- Added high score list
- Added support for constraints/joints
- Added a lose screen
- Added stats tracking
- Added another level
- Hit F12 to take screenshots
- Added more Lua functions
- Added basic replay controls
- Added fonts for various resolutions
- Fixed some compile/scons issues
- Upgraded to GPL version 3

irrlamb 0.0.3 - 2007-06-17
- Added replays
- Added pause and win screen
- Added two new levels
- Levels are now stored as xml files
- Fixed some bugs

irrlamb 0.0.2 - 2007-06-03